--- a/ms_vooma_account_and_credit/ms_vooma_account_and_credit.csproj
+++ b/ms_vooma_account_and_credit/ms_vooma_account_and_credit.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Views\" />
   </ItemGroup>
 
